test/org/midica/testfiles/failing/unmatched-close.midica
INCLUDE_FILE inc/instruments.midica

(
	0 c /4
)
)